# cmake-prebuilt-library

./: CMakeLists.txt  main.cpp  readme.md
cmake/: libhello.cmake
include/libhello/: hello.hpp
src/libhello/: hello.cpp
